--- a/index.html
+++ b/index.html
@@ -1,3 +1,119 @@
-﻿<html>
-  <h1>My online resume</h1>
- </html>
+ <html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+</head>
+
+<body background="../背景/17.jpg">
+<h1 align="center" > <font color="#FF0066" size="10" face="Comic Sans MS, cursive"  >谭浩云的个人主页</font></h1>
+<h1>My online resume</h1>
+ <hr align="left" width="100%"  color="#FF00CC"/>
+<p align="left" ><font color="#000000" size="5" face="Comic Sans MS, cursive">
+ <a name="首页1">首页</a> &nbsp;  &nbsp; 
+ <a href="#dizhi">地理位置介绍 </a> &nbsp;  &nbsp; 
+ <a href="#techan">孝感特产介绍</a> &nbsp;  &nbsp; 
+ <a href="旅游景点.html">旅游景点介绍</a> &nbsp;  &nbsp; 
+ <a href="人物.html"> 杰出人物代表</a> &nbsp;  &nbsp; 
+</font></p>
+<p> <font size="5" color="#CC0000" face="Comic Sans MS, cursive">&middot;孝感传说</font></p>
+<marquee direction="right"   scrolldelay="10"  behavior="alternate" >
+ <img src="../背景/4.jpg" width="200" height="200" align="left"/>
+ <img src="../背景/2.jpg" width="200" height="200" align="left"/>
+ <img src="../背景/1.jpg" width="200" height="200" align="left"/>
+ </marquee>
+   <img src="../背景/3.jpg" width="300" height="200" align="right"/>
+ <p> <font size="2" >
+ &nbsp;&nbsp; &nbsp;&nbsp;汉朝时，有一个闻名的孝子，姓董名永。他家里非常贫困。他的父亲去世后，董永无钱办丧事，只好以身作价向地主贷款，埋葬父亲。丧事办完后，董永便去地主家做工还钱，在半路上遇一美貌女子。拦住董永要董永娶她为妻。董永想起家贫如洗，还欠地主的钱，就死活不答应。那女子左拦右阻，说她不爱钱财．只爱他人品好。董永无奈，只好带她去地主家帮忙。那女子心灵手巧，织布如飞。她昼夜不停地干活，仅用了一个月的时间，就织了三百尺的细绢，还清了地主的债务、在他们回家的路上，走到一棵槐树下时，那女子便辞别了董永。相传该女子是天上的七仙女。因为董永心地善良，七仙女被他的孝心所感动，遂下凡帮助他。 有诗颂曰： 葬父贷孔兄，
+仙姬陌上逢；织线偿债主，孝感动苍穹。<br/> 
+
+&nbsp;&nbsp; &nbsp;&nbsp;董永原本是山东高宛县人。东汉末年，地方割据，盗贼四起，董永看到山东不太平，就带着年迈的父亲，到湖北德安避难。没过多久，董父得了重病，请医吃药毫无效果，离开了人世。董永悲痛不已，因为自己为避难漂泊之身，哪里有钱买棺埋葬父亲呢？无计可施。当地有位姓裴的富翁，闻而怜之，就借钱给他，让他买棺安葬了父亲。而董永从此卖身为奴，进了裴家。
+<br/> 
+&nbsp;&nbsp; &nbsp;&nbsp;一天董永奉主人之命，外出办事。在办完事回来的路上，遇到一个丰姿美貌的少妇。少妇流露真情地说："你没有娶妻，还是一个光棍；我是个被丈夫离弃的少妇，能否给你做妻子？"董永是个老实人，在当时社会来讲是个忠仆。他回答这位少妇说："这件事，我自己不敢作主，须禀告主人
+。"少妇笑说："痴郎，你怎么这样的怕主人？既是这样，我愿与董郎一同前去见你的主人。"董永便带着这个少妇，一同返回裴家。裴翁欣然为他们婚姻作主配成夫妻。并让他们在一百天内，
+织出三百匹绢布赎身，做自由的农人。从这天起，少妇日夜纺织绢布，快速异常，非常人可及。在一百天的前一天，将三百匹绢布交给裴翁，裴翁按照他自己说的诺言，把董永的卖身契退还给
+他。从此，董永成了自由的农人。<br/> 
+ 
+&nbsp;&nbsp; &nbsp;&nbsp;没想到董永刚脱离奴藉，少妇忽然向董永告别，说她马上要走了。董永哭着说："你为我赎身的恩德，我还没有来得及报答，你怎么就抛下我走呢？" 少妇答道："你我夫妻一场，我也舍不得你。但是，我是天帝的七女儿，天帝念董郎孝心，令我下凡相助，今百日缘满，当回去向天帝缴
+旨。"少妇说完便不见了。现在湖北省的孝感，原来叫德安，即是因为董永的孝心感动了天，所以改名为孝感。这些流传于民间的原始情节，与后来《天仙配》中的情节不同，但都是崇孝的神话传说。《天仙配》其实便是按照这个原始神话传说，夸张成为"老槐树开口做媒"。
+
+ </font>
+
+ </p>
+ <p><a href="#首页1"> <font color="#CC0000" size="5" face="Comic Sans MS, cursive"><i>----返回目录</i></font></a></p>
+ <hr width="100%" color="#FF3399"  /> 
+
+<p> <font size="5" color="#CC0000" face="Comic Sans MS, cursive"><a name="dizhi">&middot;地理位置介绍</a></font></p>
+<img src="../背景/5.png" align="left"  width="300" height="300"/>
+
+<pre><font size="2"  face="Comic Sans MS, cursive" >
+
+&nbsp;&nbsp; &nbsp;&nbsp;孝感，简称孝，中国唯一一座以孝命名的地级城市， 中国孝文化之乡，因东汉孝子董永卖身葬父，行孝感天动地而得名。
+孝感是武汉城市圈成员城市之一，也是中部地区最具潜力和竞争力的城市之一，综合竞争力在湖北省排名前六位。
+&nbsp;&nbsp; &nbsp;&nbsp;孝感地处于湖北省东北部，长江以北，汉江之东，与湖北省会城市武汉接壤，距离武汉市中心约60公里，距离武汉天河国
+际机场仅30公里，与武汉城市资源共享。
+现辖孝南区、云梦、大悟、孝昌四个区县、应城、安陆两个县级市以及一个国家级高新区和七个省级开发区，代管汉川市。全市面积8910平方公里，
+常住人口486.13万  ，其中孝感城区人口55万， 常住人口90万。
+&nbsp;&nbsp; &nbsp;&nbsp;孝感地貌自南向北为平原、丘陵、山区，气候兼有南北之优，土地肥沃，是重要粮棉油生产基地。地质矿藏丰富，有"膏都""盐海""磷山"之称。
+&nbsp;&nbsp; &nbsp;&nbsp;孝感市位于长江以北，大别山、桐柏山脉以南。地跨长江、淮河两大流域，其中长江流域8438.12平方公里，淮河流域
+471.88平方公里。桐柏山余脉和大别山余脉分别由西北向东南、东北向西南伸向北部，为长江、淮河两大水系的分水岭。总体地势走向为北高南低
+，其中淮河流域在境内呈西南高东北低的地势分布；长江流域在境内呈北高南低分布。境内北部为低山区，山峰高度一般在400～800米之间，
+境内最高山峰在鄂豫交界处的五岳山，海拔高程880米和孝昌境内的双峰尖，海拔高程873.7米。中部为丘陵地带，地面高程在海拔50～150米之
+间。南部为平原湖区，属江汉平原的一部分，地面高程在海拔50米以下，最低点（河床底部未统计）为孝南区的童家湖，海拔高程17.5米。山地面
+积为1887平方公里，占孝感市国土面积的21%，丘陵面积3692平方公里，占孝感市国土面积的41%，平原湖区面积3341平方公里，占孝感市国土面
+积的37%。
+
+</font></pre>
+ <p><a href="#首页1"> <font color="#CC0000" size="5" face="Comic Sans MS, cursive"><i>----返回目录</i></font></a></p>
+ <hr width="100%" color="#FF3399"  /> 
+ <p> <font size="5" color="#CC0000" face="Comic Sans MS, cursive"><a name="techan">&middot;特产介绍</a></font></p>
+ <ul>
+ <li>孝感麻糖
+ <p>"孝感麻糖"是湖北著名的地方风味名点。它以精制糯米、优质芝麻、绵白糖为主要原料，配以桂花、金钱桔饼等，用传统的配方精心配制，经过12道工艺流程，32个环节制成，孝感麻糖外形犹如梳子，色白如霜，香味扑鼻，风味独特，营养丰富，含蛋白质、葡萄糖和多种维生素，有暖肺、养胃、滋肝、补肾等功效。 孝感麻糖历史悠久，相传宋太祖赵匡胤曾经吃过并赞不绝口，从而一举成为皇家贡品。后来各地也都仿制，但味道就是及不上孝感本地的土产，故不相传，只有用孝感城关西门外城隍潭的"龙吐水"熬
+
+　　糖，才能制出上品的麻糖来。怪不得即使是孝感的制糖师，如若迁居他处，也会做不出原先的风味来呢。孝感麻糖的创制，据说与一个馋嘴的糖坊老板娘有关。这个老板娘因为有馋病，时常熬不住要偷糖吃。有一次，她正吃得津津有味时，看见老板进屋来了，慌得她赶忙把一碗糖丢进了装芝麻的罐子里，不想却被老板发现了。老板见糖上沾满了生芝麻，要丢掉实在心疼，要弄掉生芝麻又没有办法，不由得十分生气。这时，那个馋嘴的老板娘在边上说道："有办法利用的，把它放在锅里烙熟，好吃得很呢。"老板一试，果然味道不错，后来，一位熬糖的老师傅从这件事上受到了启发，由此创制出了孝感麻糖。
+<marquee direction="right" scrolldelay="3" behavior="alternate">
+ <img src="../背景/6.png"   width="200" height="200" align="top"/>
+ <img src="../背景/7.jpg"  width="200" height="200" align="top"/>
+ <img src="../背景/8.jpg"   width="200" height="200" align="top"/>
+ <img src="../背景/9.jpg"   width="200" height="200" align="top"/>
+ </marquee>
+ </p></li>
+ <li>孝感米酒
+ <p>
+ 孝感米酒是具有千年历史的地方名吃，它以孝感出产的优质糯米为原料，以孝感历史承传的风窝酒曲用传统方式发酵酿制而成，属于纯天然绿色饮品。由于选料考究、制法独特，孝感米酒白如玉液，清香袭人，甜润爽口，浓而不沾，稀而不流，食后生津暖胃，回味深长。
+
+　　一九五八年，毛泽东主席亲临孝感视察工作时，品尝了孝感米酒赞称"味好酒美"。"神霖牌"米酒继承和发扬了这一民族传统产品的特色，根据当地的自然条件（水质、土壤、植物群、温度、湿度、风力等）和米酒酿制的基本原理，研究出了一套顺应这里的自然条件而又有别于其它米酒生产的真空包装，一改千年无法储存保鲜之遗憾。"神霖牌"孝感米酒的问世，是孝感麻糖米酒人智慧的结晶，是孝感麻糖米酒人辛勤劳动的成果。
+
+ <img src="../背景/10.jpg"   width="300" height="300" align="top"/>
+ <img src="../背景/11.jpg"  width="300" height="300" align="top"/>
+ <img src="../背景/12.jpg"  width="300" height="300" align="top"/>
+  <img src="../背景/13.jpg"   width="300" height="300" align="top"/>
+ </p></li>
+ <li>云梦鱼面
+ <p>
+ <img src="../背景/14.jpg"   width="150" height="150" align="left"/>
+ <marquee direction="up" scrolldelay="3" behavior="alternate" >
+  云梦鱼面主产于古泽云梦，始产于清道光年间，历史悠久。云梦鱼面选用"白鹤分流"之鱼，桂花潭中之水，新麦上等的粉及芝麻香油等为主要原料精制而成，白如银，细如丝，故又称"银丝鱼面"。该产品营养丰富，风味独特，鲜美可口，诚为食用之佳肴，馈赠之佳品。1915年，云梦鱼面在巴拿马万国博览会参加特产比赛获优质银牌奖，产品畅销全国及国际市场。
+  云梦鱼面地理标志产品保护产地范围为湖北省云梦县城关镇、隔蒲潭镇、义堂镇、清明河乡等4个乡镇现辖行政区域 。
+  </marquee>
+ </p></li>
+ <br />
+ <br />
+
+ <li>安陆白花菜
+ <p>
+  <img src="../背景/15.jpg"  width="300" height="300" align="right"/>
+ 白花菜，属白花菜科一年生草本植物，含有丰富的氨基酸及人体必须的钙、铁等元素。这种菜具有独特的风味，是文明遐迩的地方特产。其茎叶腌制后可食用，是夏季主要的一种腌菜，可炒肉、蛋炒或单炒。其味清香鲜美，能提神生津、开胃建脾、增进食欲。全株还能作药用。安陆是白花菜的原产地，其栽培历史有文字可查的就有3000多年，早在康熙五年（1665）安陆县志就对白花菜作了这样的描述："白花菜一名香菜，夏日开小白花，可谓奇香味绝，胜有红梗和白梗两种，红梗优美，他处皆不及，亦土性异也"，我市常年种植面积2万吨，产值1500万元，生产的产品供不应求，远销全国各地。
+
+　　《本草纲目》上有记载，《药典大全》里也有详细的描述，科研部门的测定显示它富含对人体有益的十七种微量元素。每100克白花菜中含有氨基酸19.5克、钙202克、铁4.18克，明显高于雪里红和其它阔叶蔬菜。白花菜还具有较高的药用价值，其茎、叶和根都是较好的中药材，具有清热解毒、祛风降湿、开胃健脾、增强食欲、防病治病等多重功效。
+
+　　白花菜集中生长在湖北中部安陆市境内，当地人有将白花菜腌制食用的习惯。传统方法腌制的白花菜香味独特，口感丰富，回味无穷，是当地人餐桌上的美味佳肴和最佳佐料。
+
+ </p>
+ </li>
+ </ul>
+ 
+<p><a href="#首页1"> <font color="#CC0000" size="5" face="Comic Sans MS, cursive"><i>----返回目录</i></font></a></p>
+
+</body>
+</html>
